--- a/index.html
+++ b/index.html
@@ -1,10 +1,186 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
 <head>
 	<title>Sailok chinta</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" >
+	<link rel="stylesheet" type="text/css" href="C:\Users\Sailok Chinta\Desktop\style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="C:\Users\Sailok Chinta\Desktop\animate.css">
+
 </head>
-<body>
-<p>saiklok</p>
+
+<body id="home">
+	<nav class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-transparent animated fadeInDown" style="font-family: 'Lobster', cursive;">
+<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+
+<!-- Brand -->
+<!--<a class="navbar-brand" href="#">Logo</a>-->
+
+<!-- Links -->
+	<div class="collapse navbar-collapse" id="nav-content">   
+	<ul class="navbar-nav ml-auto">
+	<li class="nav-item">
+	<a class="nav-link active" href="#home">Home</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link active" href="#aboutme">About Me</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link active" href="#skills">Skills</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link active" href="#contact">Contact</a>
+	</li>
+	</ul>
+	</nav>
+<section>
+<div class="container">
+	<div class="row text-center justify-content-center rowHeight">
+		<div class="col align-self-center">
+			<h1 class="si" style="font-family: 'Lobster', cursive;">Sailok Chinta</h1>
+		</div>
+	</div>
+</div>
+
+<div class="jumbotron jumbotron-fluid" id="aboutme">
+	<div class="container text-center">
+		<h1 class="display-4" style="padding-bottom: 20px;font-family: 'Lobster', cursive;">Introduction</h1>
+	<div class="row">
+		<div class="col-lg-8">
+		
+			<h1><b>About Me</b></h1>
+			<p class="dis">Hi! I am Sailok Chinta . I love to code and presently my focus lies in Front end development of website using HTML5 , CSS3 and Bootstrap4 . My Main objective is to become a Full Stack Web Developer and beside Web Development , My Interest also lies in Android and Backend Development</p>
+
+			<p >So if you're interested in working with me , feel free to contact me .</p>
+			<a class="btn btn-primary btn-lg" style="color:#fff;" href="#contact" >Click Here</a>
+		</div>
+		<div class=" col-lg-4 ">
+		
+		<div class="boxed">
+		<img src="https://fb-s-a-a.akamaihd.net/h-ak-xtf1/v/t1.0-1/p160x160/15442099_854894367987082_4392660280596232420_n.jpg?oh=6cee161ef5fcec7a787510008dbb494e&oe=59833D1D&__gda__=1505207305_68d78b9df0dbb259a2a20244e9969316" style="height: 250px; width:250px; " class="img-thumbnail">
+		<table class="table table-light">
+			<tbody>
+			<tr>
+			<td>Name:</td>
+			<td>Sailok Chinta</td>
+			<hr>
+			</tr>
+			<tr>
+			<td>Age:</td>
+			<td>18 Years old</td>
+			</tr>
+			<tr>
+			<td>Date of Birth:</td>
+			<td>03-Dec-1998</td>
+			</tr>
+			</tbody>
+			</table>
+		</div>		
+		</div>
+	</div>
+	</div>
+</div>
+
+<!--<div class="jumbotron jumbotron-fluid" id="skills">
+	<div class="container text-center">
+		<div class="row justify-content-center">
+			<div class="col-xs-12">
+			<h1 class="display-4" style="font-family: 'Lobster', cursive; padding-bottom: 20px; text-align: center; ">Skills</h1>
+				</div>
+		</div>
+		<div class="row ">
+			<div class="col-sm-12 col-md-6">
+				<div class="progress">
+					<p>c:</p><div class="progress-bar" role="progressbar" style="width: 100%;border: 1px solid black;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+	</div>
+</div>-->
+
+
+<div class="jumbotron jumbotron-fluid" id="contact">
+	<div class="container text-center">
+	<div class="row justify-content-center text-center">
+		<div class="col-xs-12">
+			<h1 class="display-4" style="padding-bottom: 20px;font-family: 'Lobster', cursive;">Get in Touch</h1>
+		</div>
+	</div>
+		<div class="row  justify-content-center text-center">
+			<div class="col-lg-4">
+				<a href="https://www.facebook.com/sailok.chinta.3" target="_blank"><i class="fa fa-facebook fa-3x sr-contact" data-sr-id="3" style="; visibility: visible;  -webkit-trang-s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; color:#696969; "></i><br><p style="color :#696969;">Facebook</p></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="#"><i class="fa fa-whatsapp" aria-hidden="true" style="color: #696969; font-size: 50px;"></i><br><p style="color: #696969;">7742913888</p></a>
+			</div>
+			<div class="col-lg-4">
+				<a href="https://mail.google.com/mail/u/0/#inbox?compose=15bf273b050ef0e0" target="_blank"><i class="fa fa-envelope" aria-hidden="true" style="color: #696969; font-size: 50px;"></i><br><p style="color: #696969;">sailokchinta2012@gmail.com</p></a>
+				<a href="https://mail.google.com/mail/u/0/#inbox?compose=15bf26fa03cbaadd" target="_blank"><p style="color: #696969;">16ucs056@lnmiit.ac.in</p></a>
+			</div>
+
+		</div>
+	<div class="row" style="padding-top: 40px;">
+		<div class="col-lg-7">
+		<form action="/html/tags/html_form_tag_action.cfm" class="form-inline ">
+			<label class="mr-sm-4 mb-0" for="first_name">Name</label>
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
+			<label class="mr-sm-4 mb-0" for="last_name">Email</label>
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="email" name="email">
+			<label class="mr-sm-2 mb-0" for="first_name">Messege</label>
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="messege" name="messege">
+			
+		</form>
+		<button type="submit" class="btn btn-primary mt-2 mt-sm-0" >Submit</button>
+
+		</div>
+		<div class="col-lg-5">
+			<h1 class="dis"><b>Address For Communication</b></h1>
+			<p> BH-3 , LNMIIT , Rupa ki Nangal , Jamdoli , Jaipur , Rajasthan.</p>
+		</div>
+	</div>
+	<div class="row justify-content-center text-center">
+		<div class="col-xs-12">
+			<footer style="padding-top: 55px;">© Sailok chinta. All Rights Reserved.	</footer>
+		</div>
+	</div>
+	</div>
+
+</div>
+
 </body>
 
-</html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	var $document=$(document),
+	$element=$('.navbar'),
+	bgtransparent='bg-transparent';
+	bgprimary='bg-primary';
+	fadeindown='fadeInDown';
+	fadeinup='fadeInUp';
+
+	$document.scroll(function(){
+		if($document.scrollTop()>=670){
+			$element.addClass(bgprimary);
+			$element.removeClass(bgtransparent);
+			$element.addClass(fadeindown,1000);
+		} else{
+			$element.addClass(bgtransparent);
+			$element.removeClass(bgprimary);
+			$element.removeClass(fadeindown,1000);
+			
+		}
+	});
+
+</script>
