--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="container">
 	<div class="row text-center justify-content-center rowHeight">
 		<div class="col align-self-center">
-			<h1 class="si" style="font-family: 'Lobster', cursive;">Sailok Chinta</h1>
+			<h1 class="si animated bounceIn" style="font-family: 'Lobster', cursive;">Sailok Chinta</h1>
 		</div>
 	</div>
 </div>
