--- a/index.html
+++ b/index.html
@@ -131,16 +131,13 @@
 		</div>
 	<div class="row" style="padding-top: 40px;">
 		<div class="col-lg-7">
-		<form action="/html/tags/html_form_tag_action.cfm" class="form-inline ">
-			<label class="mr-sm-4 mb-0" for="first_name">Name</label>
-			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name">
-			<label class="mr-sm-4 mb-0" for="last_name">Email</label>
-			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="email" name="email">
-			<label class="mr-sm-2 mb-0" for="first_name">Messege</label>
-			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="messege" name="messege">
+			<form action="/html/tags/html_form_tag_action.cfm" class="form-inline ">
 			
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="first_name" name="first_name" placeholder="Name">
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="email" name="email" placeholder="E-mail">
+			<input type="text" class="form-control mr-sm-2 mb-2 mb-sm-0" id="messege" name="messege" placeholder="Type your message here..." style="height: 100px; width:455px;padding-bottom: 70px; margin-top: 15px;">
 		</form>
-		<button type="submit" class="btn btn-primary mt-2 mt-sm-0" >Submit</button>
+		<button type="submit" class="btn btn-primary mt-2 mt-sm-0 " style="margin-left:-200px;">Submit</button>
 
 		</div>
 		<div class="col-lg-5">
